<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/item_show_barcode_image"
        android:title="@string/activity_barcode_show_barcode_image"
        android:icon="@drawable/ic_barcode_other"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/item_delete"
        android:title="@string/activity_barcode_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/item_share_as_text"
        android:title="@string/activity_barcode_share_as_text"
        android:icon="@drawable/ic_share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_copy"
        android:title="@string/activity_barcode_copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_search"
        android:title="@string/activity_barcode_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_share_as_image"
        android:title="@string/activity_barcode_share_as_image"
        android:icon="@drawable/ic_share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_save_to_gallery"
        android:title="@string/activity_barcode_save_to_gallery"
        android:icon="@drawable/ic_image"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_print"
        android:title="@string/activity_barcode_print"
        android:icon="@drawable/ic_print"
        app:showAsAction="never"
        />
</menu>