<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin_small"
            android:orientation="vertical"
            >
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_create"
                app:iconBackground="@color/green"
                app:text="@string/fragment_create_barcode_qr_code_text"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_link"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_url"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_wifi"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_wifi"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_location"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_geo"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_contact_vcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_contact"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_v_card"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_contact_mecard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_contact"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_me_card"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_calendar"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_v_event"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_phone"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_phone"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_email"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_email"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_sms"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_sms"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_mms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_mms"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_mms"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_cryptocurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_bitcoin"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_cryptocurrency"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_bookmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_bookmark"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_bookmark"
                />
            <com.example.barcodescanner.feature.common.IconButtonWithDelimiter
                android:id="@+id/button_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_app"
                app:iconBackground="@color/green"
                app:text="@string/barcode_schema_google_play"
                app:isDelimiterVisible="false"
                />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/fragment_create_qr_code_list_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ToolbarStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>