<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.example.barcodescanner.feature.common.SettingsButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/activity_all_permissions_camera_title"
                app:hint="@string/activity_all_permissions_camera_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                />
            <com.example.barcodescanner.feature.common.SettingsButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/activity_all_permissions_read_contacts_title"
                app:hint="@string/activity_all_permissions_read_contacts_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                />
            <com.example.barcodescanner.feature.common.SettingsButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/activity_all_permissions_location_title"
                app:hint="@string/activity_all_permissions_location_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                />
            <com.example.barcodescanner.feature.common.SettingsButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/activity_all_permissions_storage_title"
                app:hint="@string/activity_all_permissions_storage_hint"
                app:isDelimiterVisible="false"
                app:isSwitchVisible="false"
                />
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/activity_all_permissions_title"
        style="@style/ToolbarWithBackButtonStyle"
        />
</androidx.constraintlayout.widget.ConstraintLayout>