<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/default_margin_small"
    android:paddingHorizontal="@dimen/default_margin"
    android:paddingBottom="@dimen/default_margin"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/barcode_schema_url"
        android:inputType="textUri"
        android:imeOptions="actionDone"
        android:backgroundTint="@color/blue"
        style="@style/EditTextStyle"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_big"
        android:text="@string/fragment_create_barcode_alternative"
        style="@style/SettingsGroupTitleTextViewStyle"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:text="@string/fragment_create_qr_code_url_alternative"
        style="@style/CreateBarcodeFragmentAlternativeTextViewStyle"
        />
</LinearLayout>
